<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragmentMain_logicalAND_spawner"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/fragmentMain_and"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragmentMain_logicalNAND_spawner"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/fragmentMain_nand"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragmentMain_logicalNOR_spawner"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/fragmentMain_nor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragmentMain_logicalNOT_spawner"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/fragmentMain_not"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragmentMain_logicalOR_spawner"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/fragmentMain_or"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragmentMain_logicalXNOR_spawner"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/fragmentMain_xnor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragmentMain_logicalXOR_spawner"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/fragmentMain_xor"/>
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>